# docs/swagger.json
@@ -40,7 +40,7 @@
                 "summary": "Actualiza un evento existente",
                 "parameters": [
                     {
-                        "description": "Datos del evento a actualizar, el valor de Status debe ser (Sin Revisar o Revisar)",
+                        "description": "Datos del evento a actualizar, el valor de Status debe ser (Sin Revisar o Revisado)",
                         "name": "event",
                         "in": "body",
                         "required": true,
@@ -77,7 +77,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.Event"
+                            "$ref": "#/definitions/request.EventCreate"
                         }
                     }
                 ],
@@ -93,7 +93,7 @@
         },
         "/events/get-management-required/{value}": {
             "get": {
-                "description": "Obtiene una lista de eventos filtrados por requerimiento de gestión (true o false).",
+                "description": "Obtiene una lista de eventos filtrados por requerimiento de gestión (true o false), solo si es evento ya esta en estado Revisado.",
                 "produces": [
                     "application/json"
                 ],
@@ -138,7 +138,7 @@
                 "summary": "Actualiza el estado de un evento",
                 "parameters": [
                     {
-                        "description": "Datos del estado a actualizar,  el valor de Status debe ser (Sin Revisar o Revisar)",
+                        "description": "Datos del estado a actualizar,  el valor de State debe ser (Sin Revisar o Revisado)",
                         "name": "state",
                         "in": "body",
                         "required": true,
@@ -259,7 +259,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.TypeEvent"
+                            "$ref": "#/definitions/request.TypeEventCreate"
                         }
                     }
                 ],
@@ -335,6 +335,40 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "management_required": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.EventCreate": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "type_event_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "request.TypeEventCreate": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
                 },
                 "management_required": {
                     "type": "boolean"
