# internal/app/models/request/type_event_create.go
@@ -1,0 +1,7 @@
+package request
+
+type TypeEventCreate struct {
+	Name               string `json:"name" gorm:"name"`
+	Description        string `json:"description" gorm:"description"`
+	ManagementRequired bool   `json:"management_required" gorm:"management_required"`
+}
